resize all images

--- a/index.html
+++ b/index.html
@@ -9,56 +9,59 @@
 </head>
 <body>
   <div class="container">
-    <img src="img/complang.jpg" alt="a picture of computer code">
-    <h1> Choosing a computer language:</h1>
-    <p>so.... you are getting ready to learn how to code , but you are not sure which language you would like to learn.<br>No worries! We can help. <br>Just take our short little survey and we will show you which computer language is right for you. <br><strong>Fun , right?!?</strong></p>
-    <div>
-      <form id="formOne">
-        <h3>First enter your date of birth:</h3>
-        <p>This is important because you might be too old to code. There is an age limit</p>
-        <div class="form-group">
-          <label for="born">Date of birth:</label>
-          <input id="born" class="form-control" type="date">
-        </div>
-        <h3>How would you rather spend your time: </h3>
-        <select class="form-control" id="qOne">
-          <option></option>
-          <option value="1">Framing a house</option>
-          <option value="2">doing a crossword puzzle</option>
-          <option value="3">coordinating an outfit</option>
-          <option value="4">Pulling your hair out</option>
-        </select>
-        <h3>When thinking about coding you</h3>
-        <select class="form-control" id="qTwo">
-          <option></option>
-          <option value="1">are genuinly excited to tackle a big problem (like a psyco)</option>
-          <option value="2">are willing to learn, but a a bit aprihensive</option>
-          <option value="3"> are completly apathetic. You literally couldn't care less</option>
-          <option value="4">immediatly run fully clothed into the bathroom to have a nice shower cry</option>
-        </select>
-        <h3>What is your fav breakfast food</h3>
-        <select class="form-control" id="qThree">
-          <option></option>
-          <option value="1">eggs and bacon</option>
-          <option value="2">Pancakes!!</option>
-          <option value="3">Breakfast burrito</option>
-          <option value="4">Bottomless Bloody Mary</option>
-        </select>
-        <h3>Speaking of food...I totally left my sandwhich here. Did you see it?</h3>
-        <select class="form-control" id="qFour" required>
-          <option></option>
-          <option value="1">No, sorry I have not seen it, good luck though.</option>
-          <option value="2">Yeah, I saw someone take it. lets go get that creep!</option>
-          <option value="3">Oh that's strange *while swallowing the last bite of the sanwhich</option>
-          <option value="4">Hell yeah! I ate that sandwhich. I did it on purpose too!</option>
-        </select>
-        <button type="submit" class="btn, btn-primary">check my results!</button>
-      </form>
-      <div class="results">
-        <!-- javaScript -->
-        <div class="jsresult">
-          <img src="img/JavaScript-logo.png" alt="a picture of the JavaScript logo">
-          <h1>Congratulations! You are just barely young enough to be a coder.</h1>
+    <div class="main">
+      <img src="img/complang.jpg" alt="a picture of computer code">
+      <h1> Choosing a computer language:</h1>
+      <p>so.... you are getting ready to learn how to code , but you are not sure which language you would like to learn.<br>No worries! We can help. <br>Just take our short little survey and we will show you which computer language is right for you. <br><strong>Fun , right?!?</strong></p>
+      <div>
+        <form id="formOne">
+          <h3>First enter your date of birth:</h3>
+          <p>This is important because you might be too old to code. There is an age limit</p>
+          <div class="form-group">
+            <label for="born">Date of birth:</label>
+            <input id="born" class="form-control" type="date">
+          </div>
+          <h3>How would you rather spend your time: </h3>
+          <select class="form-control" id="qOne">
+            <option></option>
+            <option value="1">Framing a house</option>
+            <option value="2">doing a crossword puzzle</option>
+            <option value="3">coordinating an outfit</option>
+            <option value="4">Pulling your hair out</option>
+          </select>
+          <h3>When thinking about coding you</h3>
+          <select class="form-control" id="qTwo">
+            <option></option>
+            <option value="1">are genuinly excited to tackle a big problem (like a psyco)</option>
+            <option value="2">are willing to learn, but a a bit aprihensive</option>
+            <option value="3"> are completly apathetic. You literally couldn't care less</option>
+            <option value="4">immediatly run fully clothed into the bathroom to have a nice shower cry</option>
+          </select>
+          <h3>What is your fav breakfast food</h3>
+          <select class="form-control" id="qThree">
+            <option></option>
+            <option value="1">eggs and bacon</option>
+            <option value="2">Pancakes!!</option>
+            <option value="3">Breakfast burrito</option>
+            <option value="4">Bottomless Bloody Mary</option>
+          </select>
+          <h3>Speaking of food...I totally left my sandwhich here. Did you see it?</h3>
+          <select class="form-control" id="qFour" required>
+            <option></option>
+            <option value="1">No, sorry I have not seen it, good luck though.</option>
+            <option value="2">Yeah, I saw someone take it. lets go get that creep!</option>
+            <option value="3">Oh that's strange *while swallowing the last bite of the sanwhich</option>
+            <option value="4">Hell yeah! I ate that sandwhich. I did it on purpose too!</option>
+          </select>
+          <button type="submit" class="btn, btn-primary">check my results!</button>
+        </form>
+      </div>
+    </div>
+        <div class="results">
+          <!-- javaScript -->
+          <div class="jsresult">
+            <img src="img/JavaScript-logo.png" alt="a picture of the JavaScript logo">
+            <h1>Congratulations! You are just barely young enough to be a coder.</h1>
           <p>good thing you wern't born the year before bacase that was the cut-off......</p>
           <h2>Anyway......It looks like JavaScript might be the right computer language for you!</h2>
           <p>No no, don't worry about it. I can find my sandwhich without your help. By all means don't get up. JavaScript is perfect for you. I see how you are, and people are talkin' buddy</p>
@@ -92,7 +95,6 @@
           <button type="button" value="Reset" class="btn btn-primary" id="again3">I can be a better person!</button>
         </div>
       </div>
-      </div>
-    </div>
-  </body>
-  </html>
+  </div>    
+</body>
+</html>
