add sto styles.cs file for some design elements

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   <div class="container">
     <div class="main">
-      <img src="img/complang.jpg" alt="a picture of computer code">
+      <img class="mainimg" src="img/complang.jpg" alt="a picture of computer code">
       <h1> Choosing a computer language:</h1>
-      <p>so.... you are getting ready to learn how to code , but you are not sure which language you would like to learn.<br>No worries! We can help. <br>Just take our short little survey and we will show you which computer language is right for you. <br><strong>Fun , right?!?</strong></p>
+      <p>So.... you are getting ready to learn how to code , but you are not sure which language you would like to learn.<br>No worries! We can help. <br>Just take our short little survey and we will show you which computer language is right for you. </p>
       <div>
         <form id="formOne">
           <h3>First enter your date of birth:</h3>
           <p>This is important because you might be too old to code. There is an age limit</p>
           <div class="form-group">
-            <label for="born">Date of birth:</label>
+            <label for="born"></label>
             <input id="born" class="form-control" type="date">
           </div>
           <h3>How would you rather spend your time: </h3>
