remove carrot at the end of star span before submit button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <img class="mainimg" src="img/complang.jpg" alt="a picture of computer code">
+  <h1 class="mainimg"> Choosing a computer language:</h1>
   <div class="container">
     <div class="main">
-      <h1 class="col-12"> Choosing a computer language:</h1>
       <p>So.... you are getting ready to learn how to code , but you are not sure which language you would like to learn.<br>No worries! We can help. <br>Just take our short little survey and we will show you which computer language is right for you. </p>
       <div>
         <form id="formOne">
@@ -53,6 +53,7 @@
             <option value="3">Oh that's strange *while swallowing the last bite of the sanwhich</option>
             <option value="4">Hell yeah! I ate that sandwhich. I did it on purpose too!</option>
           </select>
+          <p>Required<span class="star">*</span></p>
           <button type="submit" class="btn, btn-primary">check my results!</button>
         </form>
       </div>
@@ -95,7 +96,6 @@
           <button type="button" value="Reset" class="btn btn-primary" id="again4">I can be a better person!</button>
         </div>
       </div>
-      <p>Required<span class="star">*</span></p>>
   </div>    
 </body>
 </html>
