re-add 'required' in the html to the form eliments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input id="born" class="form-control" type="date">
           </div>
           <h3>How would you rather spend your time<span class="star">*</span> </h3>
-          <select class="form-control" id="qOne">
+          <select class="form-control" id="qOne" required>
             <option></option>
             <option value="1">Framing a house</option>
             <option value="2">doing a crossword puzzle</option>
@@ -30,7 +30,7 @@
             <option value="4">Pulling your hair out</option>
           </select>
           <h3>When thinking about coding you<span class="star">*</span></h3>
-          <select class="form-control" id="qTwo">
+          <select class="form-control" id="qTwo" required>
             <option></option>
             <option value="1">are genuinly excited to tackle a big problem (like a psyco)</option>
             <option value="2">are willing to learn, but a a bit aprihensive</option>
@@ -38,7 +38,7 @@
             <option value="4">immediatly run fully clothed into the bathroom to have a nice shower cry</option>
           </select>
           <h3>What is your fav breakfast food<span class="star">*</span></h3>
-          <select class="form-control" id="qThree">
+          <select class="form-control" id="qThree" required>
             <option></option>
             <option value="1">eggs and bacon</option>
             <option value="2">Pancakes!!</option>
